--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -95,11 +95,11 @@
             <div class="team-h">
                 <h1 class="h1-team">About festival</h1>
             </div>
-            <div  class="main-festiwal margin-bez">
-                <a href="program.html" class="card" >
+            <div class="main-festiwal margin-bez">
+                <a href="program.html" class="card">
                     Program
                 </a>
-                <a href="artysci.html" class="card" >
+                <a href="artysci.html" class="card">
                     Artists
                 </a>
 
@@ -110,32 +110,30 @@
                 <div class="text-container">
                     <p class="text-application width-form">
                         We are thrilled to invite you to the 1st Kalisz Piano Festival, which will take place
-                        from October 21-23, 2024, in the beautiful concert hall of the Henryk Melcer State
-                        Music School in Kalisz
-                        <a href="https://www.google.pl/maps/place/Pa%C5%84stwowa+Szko%C5%82a+Muzyczna+I+i+II+stopnia+im.+H.+Melcera/@51.7641879,18.0907639,17z/data=!3m1!4b1!4m6!3m5!1s0x471ac598ed032b71:0xfa93c7620f6b5b64!8m2!3d51.7641879!4d18.0933388!16s%2Fg%2F1tgn3gy7?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D"
-                            class="link-google link2" target="_blank">(ckeck)</a>.
+                        from October 21-23, 2024, in the beautiful concert hall of <a href="https://www.psm.kalisz.pl"
+                            class="link-google link2" target="_blank">the Henryk Melcer State
+                            Music School in Kalisz</a>.
                         The 1st Kalisz Piano Festival is a unique event where the audience will have the
                         opportunity to enjoy performances of works from various musical eras by acclaimed
                         pianists from Austria, Poland, and Italy. Among the invited artists are also the
-                        laureates of last year's 1st International Henryk Melcer Piano Competition <a
-                            href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link-google link2"
-                            target="_blank">(results)</a>, organized by the Calisia Arts Foundation.
+                        laureates of last year's <a href="https://calisia-arts.com/rules.html" class="link-google link2"
+                            target="_blank">1st International Henryk Melcer Piano Competition</a>, organized by the
+                        Calisia Arts
+                        Foundation.
 
                         </br> </br>
                         In addition to the concerts, the Festival will also feature a series of lectures and piano
                         workshops for talented youth from Kalisz and the surrounding area. These will be led
-                        by Prof. Manfred Wagner-Artzt from the University of Music and Performing Arts
-                        Vienna <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">(more
-                            information)</a>Prof. Zbigniew Raubo from the Karol Szymanowski Academy of Music in Katowice
-                        <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google link2"
-                            target="_blank"> (more information)</a>
-                        and Dr. Łukasz Byrdy from the Ignacy Jan Paderewski Academy of Music in Poznań <a
-                            href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">(more
-                            information)</a>.
-
+                        by <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">Prof. Manfred
+                            Wagner-Artzt</a> from the University of Music and Performing Arts
+                        Vienna, <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google link2"
+                            target="_blank">Prof. Zbigniew Raubo</a> from the Karol Szymanowski Academy of Music in
+                        Katowice and
+                        <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">Dr. Łukasz Byrdy</a>
+                        from the Ignacy Jan Paderewski Academy of Music in Poznań.
                     </p>
                 </div>
-           
+
                 <br><br>
 
             </div>
