--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -110,22 +110,18 @@
                     <p class="text-application width-form">
                         I Kaliski Festiwal Pianistyczny
                         Z wielką radością zapraszamy do udziału w I Kaliskim Festiwalu Pianistycznym, który odbędzie się
-                        w dniach 21-23 października 2024 roku w pięknej sali koncertowej Państwowej Szkoły Muzycznej I i
-                        II stopnia im. Henryka Melcera w Kaliszu <a href="https://www.google.pl/maps/place/Pa%C5%84stwowa+Szko%C5%82a+Muzyczna+I+i+II+stopnia+im.+H.+Melcera/@51.7641879,18.0907639,17z/data=!3m1!4b1!4m6!3m5!1s0x471ac598ed032b71:0xfa93c7620f6b5b64!8m2!3d51.7641879!4d18.0933388!16s%2Fg%2F1tgn3gy7?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D" class="link-google link2" target="_blank">- lokalizacja</a>.
+                        w dniach 21-23 października 2024 roku w pięknej sali koncertowej <a href="https://https://www.psm.kalisz.pl" class="link-google link2" target="_blank">Państwowej Szkoły Muzycznej I i
+                            II stopnia im. Henryka Melcera w Kaliszu</a>.
                         I Kaliski Festiwal Pianistyczny to wyjątkowe wydarzenie, podczas którego publiczność będzie
                         miała okazję wysłuchać interpretacji utworów z różnych epok w wykonaniu utytułowanych pianistów
                         z Austrii, Polski i Włoch. Wśród zaproszonych artystów znajdują się także laureaci
-                        zeszłorocznego I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera <a href="https://calisia-arts.com/polish-version-calisia-web/wyniki.html" class="link2" target="_blank">(wyniki)</a>
-                        zorganizowanego przez Fundację Calisia Arts.
+                        zeszłorocznego <a href="https://calisia-arts.com/polish-version-calisia-web/konkurs24.html" class="link2" target="_blank">I Międzynarodowego Konkursu Pianistycznego im. Henryka Melcera</a> zorganizowanego przez Fundację Calisia Arts.
 
                         </br> </br>
                         Oprócz koncertów, w trakcie Festiwalu odbędzie się również cykl wykładów oraz warsztatów
-                        pianistycznych dla uzdolnionej młodzieży z Kalisza i okolic prowadzonych przez: prof. Manfreda
-                        Wagner-Artzta z Uniwersytetu Muzycznego w Wiedniu (mdw) <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">(więcej o artyście)</a>
-                        , a także prof. Zbigniewa Raubo z Akademii Muzycznej im. Karola
-                        Szymanowskiego <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2" target="_blank"> (więcej o artyście)</a> w Katowicach i dr. Łukasza Byrdy z
-                        Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu
-                        <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">(więcej o artyście)</a>.
+                        pianistycznych dla uzdolnionej młodzieży z Kalisza i okolic prowadzonych przez: <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">prof. Manfreda Wagner-Artzta</a> z Uniwersytetu Muzycznego w Wiedniu (mdw), a także <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2" target="_blank">prof. Zbigniewa Raubo</a> z Akademii Muzycznej im. Karola
+                        Szymanowskiego  w Katowicach i <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">dr. Łukasza Byrdy</a> z
+                        Akademii Muzycznej im. I. J. Paderewskiego w Poznaniu.
 
                     </p>
                 </div>
