--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -117,7 +117,7 @@
                             <span class="gold"> 17:00 </span> - Wykład prof. Zbigniewa Raubo : "Triada ostatnich Sonat
                             L. van Beethovena. Apogeum stylu
                             klasycznego czy nowy rozdział?" <br>
-                            <span class="gold"> 18:00 </span> - Recital prof. Zbigniewa Raubo
+                            <span class="gold"> 18:00 </span> - Recital prof. Zbigniewa Raubo <br>
                             <span class="gold">Program recitalu: </span> <br>
 
                             - F. Schubert: Klavierstuck es-moll D 946 <br>
