--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -120,11 +120,11 @@
                             <span class="gold"> 18:00 </span> - Recital prof. Zbigniewa Raubo <br>
                             <span class="gold">Program recitalu: </span> <br>
 
-                            - F. Schubert: Klavierstuck es-moll D 946 <br>
-                            - J. Brahms: Scherzo es-moll op. 4 <br>
-                            - L. van Beethoven: Sonata As-dur op. 110 <br>
-                            - F. Chopin: Nokturn c-moll op. 48 nr 1 <br>
-                            - F. Chopin: Andante Spianato i Wielki Polonez Es-dur op. 22 <br>
+                            - F. Schubert - Klavierstuck es-moll D 946 <br>
+                            - J. Brahms - Scherzo es-moll op. 4 <br>
+                            - L. van Beethoven - Sonata As-dur op. 110 <br>
+                            - F. Chopin - Nokturn c-moll op. 48 nr 1 <br>
+                            - F. Chopin - Andante Spianato i Wielki Polonez Es-dur op. 22 <br>
 
                             <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2 text2"
                                 target="_blank">Więcej informacji o artyście</a>
@@ -148,7 +148,7 @@
                             <span class="gold">Program recitalu: </span> <br>
 
                             - D. Scarlatti - Sonata d-moll K. 9 <br>
-                            - D . Scarlatti - Sonata d-moll K. 1 <br>
+                            - D. Scarlatti - Sonata d-moll K. 1 <br>
                             - F. Chopin - Rondo a la Mazur op. 5 <br>
                             - J. Brahms - III Sonata f-moll op. 5 <br>
                             <a href="https://lukaszbyrdy.com/" class="link2 text2" target="_blank">Więcej informacji o
