--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -113,18 +113,18 @@
                     </div>
                     <div class="team-text program-mobile">
                         <p class="p-team program-text">
-                            <span class="gold"> 13:00 - 16:00 </span> - Kursy z dr. Łukaszem Byrdy <br>
-                            <span class="gold"> 17:00 </span> - Wykład prof. Zbigniewa Raubo : "Triada ostatnich Sonat
+                            <span class="gold">13:00 - 16:00</span> - Kursy z dr. Łukaszem Byrdy <br>
+                            <span class="gold">17:00</span> - Wykład prof. Zbigniewa Raubo : "Triada ostatnich Sonat
                             L. van Beethovena. Apogeum stylu
                             klasycznego czy nowy rozdział?" <br>
-                            <span class="gold"> 18:00 </span> - Recital prof. Zbigniewa Raubo <br>
-                            <span class="gold">Program recitalu: </span> <br>
+                            <span class="gold">18:00</span> - Recital prof. Zbigniewa Raubo <br>
+                            <span class="gold">Program recitalu:</span> <br>
 
-                            - F. Schubert - Klavierstuck es-moll D 946 <br>
-                            - J. Brahms - Scherzo es-moll op. 4 <br>
-                            - L. van Beethoven - Sonata As-dur op. 110 <br>
-                            - F. Chopin - Nokturn c-moll op. 48 nr 1 <br>
-                            - F. Chopin - Andante Spianato i Wielki Polonez Es-dur op. 22 <br>
+                            - F. Schubert - Klavierstuck es-moll D 946<br>
+                            - J. Brahms - Scherzo es-moll op. 4<br>
+                            - L. van Beethoven - Sonata As-dur op. 110<br>
+                            - F. Chopin - Nokturn c-moll op. 48 nr 1<br>
+                            - F. Chopin - Andante Spianato i Wielki Polonez Es-dur op. 22<br>
 
                             <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link2 text2"
                                 target="_blank">Więcej informacji o artyście</a>
@@ -143,24 +143,24 @@
                     </div>
                     <div class="team-text program-mobile">
                         <p class="p-team program-text">
-                            <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Zbigniewem Raubo <br>
+                            <span class="gold">13:00 - 16:00</span> - Kursy z prof. Zbigniewem Raubo<br>
                             <span class="gold"> 15:00</span> - Recital dr. Łukasza Byrdy<br>
-                            <span class="gold">Program recitalu: </span> <br>
+                            <span class="gold">Program recitalu:</span> <br>
 
-                            - D. Scarlatti - Sonata d-moll K. 9 <br>
-                            - D. Scarlatti - Sonata d-moll K. 1 <br>
-                            - F. Chopin - Rondo a la Mazur op. 5 <br>
-                            - J. Brahms - III Sonata f-moll op. 5 <br>
+                            - D. Scarlatti - Sonata d-moll K. 9<br>
+                            - D. Scarlatti - Sonata d-moll K. 1<br>
+                            - F. Chopin - Rondo a la Mazur op. 5<br>
+                            - J. Brahms - III Sonata f-moll op. 5<br>
                             <a href="https://lukaszbyrdy.com/" class="link2 text2" target="_blank">Więcej informacji o
                                 artyście</a> <br> <br>
-                            <span class="gold"> 17:00 </span> - Wykład prof. Manfreda Wagnera- Artzta „O interpretacji
+                            <span class="gold"> 17:00</span> - Wykład prof. Manfreda Wagnera- Artzta „O interpretacji
                             muzyki fortepianowej Klasyków
                             Wiedeńskich“ <br>
-                            <span class="gold"> 18:00 </span> - Recital prof. Manfreda Wagnera-Artzta <br>
-                            <span class="gold">Program recitalu: </span> <br>
-                            - J. Haydn - Sonata e-moll Hob. XVI/34 <br>
+                            <span class="gold"> 18:00</span> - Recital prof. Manfreda Wagnera-Artzta <br>
+                            <span class="gold">Program recitalu:</span> <br>
+                            - J. Haydn - Sonata e-moll Hob. XVI/34<br>
                             - W. A. Mozart - Sonata F-dur KV 332 <br>
-                            - L. van Beethoven - Sonata c-moll op. 13 <br>
+                            - L. van Beethoven - Sonata c-moll op. 13<br>
                             <a href="https://www.wagnerartzt.com/" class="link2 text2" target="_blank">Więcej informacji
                                 o artyście</a>
                         </p>
@@ -174,42 +174,42 @@
                     </div>
                     <div class="team-text program-mobile">
                         <p class="p-team program-text">
-                            <span class="gold">13:00 - 16:00 </span> - Kursy z prof. Manfredem Wagnerem-Artztem <br>
-                            <span class="gold"> 15:00 </span> - Recital Katarzyny Sobich <br>
-                            <span class="gold">Program recitalu: </span> <br>
-                            - F.Chopin – Mazurek a-moll op. 59 nr 1 <br>
-                            - F.Chopin – Preludia op. 28 nr 1, 2, 6, 10, 13, 15 <br>
-                            - F. Chopin – Nokturn G-dur op. 37 nr 2 <br>
-                            - F. Chopin – Fantazja f-moll op. 49 <br>
-                            - I.J. Paderewski – Krakowiak Fantastyczny H-dur op. 14 nr 6 <br>
+                            <span class="gold">12:00 - 15:00</span> - Kursy z prof. Manfredem Wagnerem-Artztem <br>
+                            <span class="gold"> 15:00</span> - Recital Katarzyny Sobich <br>
+                            <span class="gold">Program recitalu:</span> <br>
+                            - F. Chopin – Mazurek a-moll op. 59 nr 1<br>
+                            - F. Chopin – Preludia op. 28 nr 1, 2, 6, 10, 13, 15<br>
+                            - F. Chopin – Nokturn G-dur op. 37 nr 2<br>
+                            - F. Chopin – Fantazja f-moll op. 49<br>
+                            - I.J. Paderewski – Krakowiak fantastyczny H-dur op. 14 nr 6 <br>
                             <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
-                                target="_blank">Bio</a> <br>
+                                target="_blank">Więcej informacji o artyście</a> <br>
 
 
-                            <span class="gold"> 17:15 </span> - Podsumowanie Festiwalu oraz recitale
+                            <span class="gold">17:30</span> - Podsumowanie Festiwalu oraz recitale
                             laureatów zeszłorocznego Konkursu <br> - Macieja Domagały oraz Stefano Brizziego <br>
 
-                            <span class="gold"> 17:45 </span> - Recital Macieja Domagały
+                            <span class="gold">17:45 </span> - Recital Macieja Domagały
                            <br>
                             <span class="gold">Program recitalu: </span> <br>
                             - F. Chopin - Walc As-dur op. 34 nr 1 <br>
-                            - I.J. Paderewski - Sarabanda h-moll z Humoresques de concert a l'antique op. 14 <br>
+                            - I. J. Paderewski - Sarabanda h-moll z Humoresques de concert a l'antique op. 14 <br>
                             - F. Chopin - Sonata h-moll op. 58 <br>
                             <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
-                                target="_blank">Bio</a> <br>
+                                target="_blank">Więcej informacji o artyście</a> <br>
 
-                            <span class="gold"> 18:30 </span> - Recital Stefano Brizziego
+                            <span class="gold">18:30</span> - Recital Stefano Brizziego
                             <br>
                             <span class="gold">Program recitalu: </span> <br>
-                            - C.W. Gluck- G. Sgambati - Melodia z „Orfeusz i Eurydyka” <br>
-                            - F.Liszt - Etiuda transcendentalna nr 8 „Wilde Jagd” <br>
+                            - C. W. Gluck- G. Sgambati - Melodia z „Orfeusz i Eurydyka” <br>
+                            - F. Liszt - Etiuda transcendentalna nr 8 „Wilde Jagd” <br>
                             - F. Chopin - Scherzo cis-moll op. 39 <br>
-                            - F.Liszt - Rapsodia węgierska nr 12 <br>
-                            - J.Brahms - Wariacje na temat Paganiniego op. 35, cz. I <br>
+                            - F. Liszt - Rapsodia węgierska nr 12 <br>
+                            - J. Brahms - Wariacje na temat Paganiniego op. 35, cz. I <br>
 
 
                             <a href="https://calisia-arts.com/polish-version-calisia-web/artysci.html" class="link2 text2"
-                                target="_blank">Bio</a>
+                                target="_blank">Więcej informacji o artyście</a>
                         </p>
                     </div>
                 </div>
