--- a/polish-version-calisia-web/contact-pl.html
+++ b/polish-version-calisia-web/contact-pl.html
@@ -105,7 +105,7 @@
                         <i class="fa-solid fa-envelope icon-form"></i>
                     </div>
                     <div class="inside-form-2 inside-form-2-responsive">
-                        <div class="boldletter">Detale</div>
+                        <div class="boldletter">Kontakt</div>
                         <div class="second-line">calisiaarts@gmail.com </br> </br>
 
                             <span class="bank-account-letters"> KRS: 0000933278 </span> </br>
