--- a/artysci.html
+++ b/artysci.html
@@ -109,7 +109,170 @@
             <div class="flex-team">
                 <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                     <div class="small-class-team">
+                        <img class="image-1" src="slider-images/lukasz.jpg" alt="team member" />
+                        <h1 class="h1-team-members">dr Łukasz Byrdy</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Dr. Łukasz Byrdy is one of the most outstanding pianists of the younger generation, who
+                            during his concert career spanning over 10 years, has performed several hundred times in
+                            most European countries, as well as in the USA, Canada, China, and the United Arab Emirates.
 
+                            Born in Katowice, he is a laureate of over 20 international piano competitions, including
+                            winning top prizes at the Fryderyk Chopin International Piano Competition in Beijing and at
+                            the International Piano Competition in Hanover. He has also been awarded at competitions in
+                            Switzerland, Italy, Malta, and Poland. Following enthusiastically received performances at
+                            the 17th International Fryderyk Chopin Piano Competition in Warsaw, his career noticeably
+                            gained momentum. Dr. Łukasz Byrdy is also one of the ten semifinalists of the prestigious
+                            Honens International Piano Competition in Calgary (2022) and a recipient of numerous
+                            scholarships and artistic awards, including multiple scholarships from the Polish Ministry
+                            of Culture and National Heritage, and the „Young Poland” award given to the most outstanding
+                            artists of the young generation. The pianist has been frequently invited as a soloist and
+                            chamber musician to music festivals in Vilnius (Christopher Festival in the Bernardine
+                            Park), Paris („Chopin au jardin” and „Chopin a Paris” at the Orangery in the Bagatelle
+                            Park), Aspen (Music Festival and School) and Moscow (Polish-Russian Music Festival). He has
+                            performed in Warsaw at the „Chopin and His Europe” festival and the Ignacy Jan Paderewski
+                            International Festival, the „Chopin in the Colors of Autumn” festival in Ostrów
+                            Wielkopolski, the „Silesian Quartet and its Guests” Chamber Music Festival in Katowice, the
+                            International Fryderyk Chopin Festival in Duszniki Zdrój and the Jerzy Waldorff Festival in
+                            Radziejowice. The artist has performed in the world's major music centers, presenting his
+                            interpretations on prestigious stages such as Harris Concert Hall in Aspen (USA), Bella
+                            Concert Hall and Rozsa Centre in Calgary (Canada), Orangery in the Bagatelle Park in Paris
+                            (France), Aula of the Sapienza University in Rome (Italy), Pushkin Museum and Scriabin
+                            Museum in Moscow (Russia), concert halls of music conservatories in Beijing and Chengdu
+                            (China) and Tianfu Center in Chengdu (China). In Poland he has performed in numerous
+                            philharmonic halls, as well as in the Concert Hall of the National Polish Radio Symphony
+                            Orchestra (NOSPR) in Katowice, the Lutosławski Polish Radio Concert Studio in Warsaw, the
+                            European Music Center in Lusławice, the Holy Cross Church in Warsaw, the Fryderyk Chopin
+                            Museum in Warsaw, the Birthplace of Fryderyk Chopin in Żelazowa Wola, the Royal Castle in
+                            Warsaw, the Royal Theater and the Palace on the Isle in the Royal Łazienki Park in Warsaw.
+
+                            Dr. Łukasz Byrdy graduated from the Universität der Künste in Berlin and the Ignacy Jan
+                            Paderewski Academy of Music in Poznań and is currently a faculty in the piano department of
+                            the Ignacy Jan Paderewski Academy of Music in Poznań. He conducts numerous courses and
+                            masterclasses in Poland and abroad, collaborating with, among others: Mount Royal University
+                            in Calgary, the University of Agder in Kristiansand, the Estonian Academy of Music and
+                            Theater in Tallinn and the Sichuan Conservatory of Music in Chengdu. In his pedagogical
+                            career, he has been invited several times to conduct masterclasses on Morningside Music
+                            Bridge - one of the most prestigious music summer programs for the most talented young
+                            musicians from around the world, that takes place annually at the New England Conservatory
+                            of Music in Boston. Łukasz Byrdy has made numerous recordings for radio and television. His
+                            performances have been broadcast by Polish Radio, Polish Television, Lithuanian National
+                            Radio and Television, Central Chinese Television CCTV, and Sichuan Radio and Television.
+
+                            In 2017, with support of the Piotr Kler Foundation, his debut album with piano concertos by
+                            F. Chopin and W. A. Mozart was released.
+                        </p>
+                    </div>
+                </div>
+
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+                        <img class="image-1" src="slider-images/raubo.jpg" alt="team member" />
+                        <h1 class="h1-team-members">prof. Zbigniew Raubo</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+                            Laureate of the F. Busoni Competition in Bolzano (1991) and the F. Liszt Competition in
+                            Utrecht (1992) – to date, he remains the only Polish laureate of this prestigious
+                            competition – as well as the K. Szymanowski Competition in Łódź (1987). He graduated with
+                            honors from the Academy of Music in Katowice, where he studied under Prof. Andrzej Jasiński,
+                            and later became his assistant. He currently holds the position of professor at his alma
+                            mater. In June 2013, the President of Poland awarded him the title of Professor of Musical
+                            Arts. He holds the title of Ambassador of the City of Kalisz and was awarded the Gold Cross
+                            of Merit in 2023.
+
+                            Prof. Raubo has performed in all the major philharmonics across Poland. He has worked with
+                            some of the country’s most distinguished conductors, including Jerzy Maksymiuk, Antoni Wit,
+                            Agnieszka Duczmal, Jerzy Salwarowski, Mirosław J. Błaszczyk, Marek Pijarowski, Tomasz Bugaj,
+                            Jerzy Swoboda, Krzysztof Missona, Łukasz Borowicz, Marek Moś, Czesław Grabowski, and Renard
+                            Czajkowski. His repertoire includes over 30 works for piano and orchestra. Among his notable
+                            artistic achievements are recitals at the Chopin Festival in Vancouver, the “Poolse
+                            Meesters” Festival in Belgium, piano workshops and a concert at the Campos do Jordao
+                            Festival in Brazil, and a recital and masterclass at the International Chopin Festival in
+                            Duszniki-Zdrój.
+
+                            Prof. Raubo has made numerous recordings for both domestic and international labels,
+                            including the Japanese branches of Deutsche Gramophon and RCA, International Music
+                            Corporation, and the DUX and Żuk Records labels.
+
+                            Prof. Raubo is also an avid chamber musician, having performed with the Silesian Quartet,
+                            Wilanów Quartet, Camerata Quartet, as well as Bartłomiej Nizioł, Urszula Kryger, Elżbieta
+                            Mrożek-Loska, and Piotr Janosik.
+
+                            In addition to his work at the Academy of Music in Katowice, Prof. Raubo is actively
+                            involved in teaching young pianists through numerous courses and consulting in music
+                            education at lower levels. He also teaches at masterclasses for pianists. His academic work
+                            includes serving as a supervisor for nine doctoral theses, as well as frequently acting as a
+                            reviewer in doctoral dissertations and professorial title procedures.
+
+                            Prof. Raubo has served on the juries of both national and international competitions,
+                            including the National F. Chopin Competition in Warsaw, the Chopin Competition in Asia
+                            (Japan), and the Yamaha Foundation Scholarship Competition. He was also a juror at the 11th
+                            International I.J. Paderewski Competition in Bydgoszcz and the 5th International Baltic
+                            Piano Competition in Gdańsk.
+
+                            His students include laureates of numerous music competitions, such as the Liszt Competition
+                            in Wrocław, the Liszt Competition in Parma, the International F. Chopin Competition for
+                            Children and Youth in Szafarnia, the National F. Chopin Competition in Warsaw, the Polish
+                            Piano Festival in Słupsk, and others. In recent years, his student, now assistant, Tymoteusz
+                            Bies, won the first edition of the International K. Szymanowski Competition in Katowice.
+                        </p>
+                    </div>
+                </div>
+
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+                        <img class="image-1" src="slider-images/artz.jpg" alt="team member" />
+                        <h1 class="h1-team-members">Prof. Manfred Wagner-Artzt</h1>
+                    </div>
+                    <div class="team-text">
+                        <p class="p-team">
+
+                            The Viennese-born pianist, Prof. Manfred Wagner-Artzt was admitted at the age of 13 to the
+                            "Concert Performance" training class of Richard Hauser at the former Academy of Music and
+                            Performing Arts in Vienna. He later continued his studies with Alexander Jenner at the
+                            University of Music and Performing Arts in Vienna, where, as Jenner's student, he earned his
+                            concert diploma in 1974. A few months later, he completed his chamber music training with a
+                            diploma and from then on presented himself to the public as a soloist, chamber musician, and
+                            accompanist.
+
+                            His international concert career began with a gold medal at the International Piano
+                            Competition in Vercelli, which has since taken him to some of the most prestigious concert
+                            halls in Europe (including Vienna's Great Musikverein Hall, Vienna's Great Konzerthaus Hall,
+                            Salzburg's Mozarteum, Berlin Philharmonie, Munich's Am Gasteig, WDR Broadcasting Hall in
+                            Cologne, Paris Salle Gaveau, London Saint John's Smith Square, Warsaw Philharmonic, De
+                            Doelen in Rotterdam, Concertgebouw Amsterdam, among others), as well as to the United States
+                            (including Washington National Gallery), Russia (including the Moscow Tchaikovsky
+                            Conservatory, St. Petersburg Hermitage, Pushkin Museum), Japan, China, Hong Kong, South
+                            America, and the Near and Middle East.
+
+                            His artistic endeavors are documented in numerous recordings for international radio and
+                            television stations, as well as on records and CDs (EMI, GRAMOLA, MDG, DIVERTIMENTO, etc.).
+
+                            A significant focus of his concert activity has been his extensive chamber music
+                            collaborations with many internationally renowned instrumentalists, such as members of the
+                            Alban Berg Quartet, the Vienna String Sextet, the Vienna Philharmonic, as well as Heinrich
+                            Schiff, Christian Altenburger, Gerald Schubert, Ernst Kovacic, Ludwig Streicher, Roland
+                            Pidoux, and others. He also performs as a piano duo with his wife, Susanna Artzt.
+
+                            From 1975 to 2010, he was a member of "exxj" (Ensemble 20th Century), engaging with the
+                            latest developments in contemporary music.
+
+                            He has given masterclasses and lecture-recitals at the Moscow Tchaikovsky Conservatory and
+                            in the USA, as well as masterclasses both domestically and internationally, and has served
+                            as a lecturer at the European Academy in Montepulciano.
+
+                            In October 1975, he began teaching at the University of Music and Performing Arts in Vienna,
+                            where he became a full professor in 1999 and retired in October 2021.
+                        </p>
+                    </div>
+                </div>
+
+
+                <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
+                    <div class="small-class-team">
+                        <img class="image-1" src="slider-images/sobich.jpg" alt="team member" />
                         <h1 class="h1-team-members">Katarzyna Sobich</h1>
                     </div>
                     <div class="team-text">
@@ -134,7 +297,7 @@
                 </div>
                 <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                     <div class="small-class-team">
-
+                        <img class="image-1" src="slider-images/domagala.jpg" alt="team member" />
                         <h1 class="h1-team-members"> Maciej Domagała</h1>
                     </div>
                     <div class="team-text">
@@ -184,7 +347,7 @@
 
                 <div data-aos="fade-up" data-aos-duration="1000" class="box-1-team">
                     <div class="small-class-team">
-
+                        <img class="image-1" src="slider-images/brizzi.jpg" alt="team member" />
                         <h1 class="h1-team-members">Stefano Brizzi</h1>
                     </div>
                     <div class="team-text">
