--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -94,7 +94,7 @@
         </header>
         <section class="contact">
             <div class="team-h">
-                <h1 class="h1-team">Konkurs 2023</h1>
+                <h1 class="h1-team">I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera</h1>
             </div>
             <div class="main-festiwal margin-bez wynik">
                 <a href="o-konkursie.html" class="card card2">
@@ -114,7 +114,6 @@
             <div class="container-text-photos container-text-photos2">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera
                         Zorganizowany przez Fundację Calisia Arts I Międzynarodowy Konkurs Pianistyczny im. Henryka
                         Melcera przyciągnął 77 pianistów i pianistek z kilkunastu krajów na całym świecie. Konkurs miał
                         na celu odkrywanie i promocję talentów, przypominając jednocześnie postać Henryka Melcera-
