--- a/rules.html
+++ b/rules.html
@@ -92,7 +92,7 @@
     </header>
     <section class="contact">
         <div class="team-h">
-            <h1 class="h1-team">Competition 2023</h1>
+            <h1 class="h1-team"> 1st International Henryk Melcer Piano Competition</h1>
         </div>
         <div class="main-festiwal margin-bez wynik">
             <a href="rules.html" class="card card2">
@@ -112,7 +112,6 @@
         <div class="container-text-photos container-text-photos2">
             <div class="text-container">
                 <p class="text-application width-form">
-                    1st International Henryk Melcer Piano Competition
                     Organized by the Calisia Arts Foundation, the 1st International Henryk Melcer Piano
                     Competition attracted 77 pianists from several countries around the world. The
                     competition aimed to discover and promote new talents while commemorating the
