--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -93,7 +93,7 @@
         </header>
         <section class="contact">
             <div class="team-h">
-                <h1 class="h1-team">About festival</h1>
+                <h1 class="h1-team">1st Kalisz Piano Festival</h1>
             </div>
             <div class="main-festiwal margin-bez">
                 <a href="program.html" class="card">
