--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -92,7 +92,7 @@
         </header>
         <section class="contact">
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-                <h1 class="h1-team">O festiwalu</h1>
+                <h1 class="h1-team">I Kaliski Festiwal Pianistyczny</h1>
             </div>
             <div class="main-festiwal margin-bez">
                 <a href="program.html" class="card" >
@@ -108,7 +108,6 @@
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        I Kaliski Festiwal Pianistyczny
                         Z wielką radością zapraszamy do udziału w I Kaliskim Festiwalu Pianistycznym, który odbędzie się
                         w dniach 21-23 października 2024 roku w pięknej sali koncertowej <a href="https://https://www.psm.kalisz.pl" class="link-google link2" target="_blank">Państwowej Szkoły Muzycznej I i
                             II stopnia im. Henryka Melcera w Kaliszu</a>.
